update project card

--- a/projects.html
+++ b/projects.html
@@ -111,83 +111,97 @@
             <hr />
             <h2>BI Solutions</h2>
 
-            <h2>Customer Transaction Analysis</h2>
-            <p>
-              <b>Solution:</b> To understand customer behaviour and needs in
-              order to increase customer loyalty and prevent churn customers.
-              <br />
-              <b>Use case:</b> Operational report for Marketing department of a
-              large furniture and home decore retailer.
-            </p>
-            <a
-              href="/contents_resources/images/customer_transaction_analysis.png"
-              target="_blank"
-            >
-              <img
-                src="/contents_resources/images/customer_transaction_analysis.png"
-                width="300"
-            /></a>
-            <br /><br /><br />
+            <!-- Customer Transaction Analysis -->
 
-            <h2>Operation Line Report</h2>
-            <p>
-              <b>Solution:</b> To understand live operation status, prevent
-              operation disruption and accelerate PDCA cycle.
-              <br />
-              <b>Use case:</b> Operational report for Business Improvement
-              Department of a large printing electronic products manufacturer.
-            </p>
-            <a
-              href="/contents_resources/images/production_line_analysis_report.png"
-              target="_blank"
-            >
-              <img
-                src="/contents_resources/images/production_line_analysis_report.png"
-                width="300"
-            /></a>
+            <div class="card">
+              <h2>Customer Transaction Analysis</h2>
+              <p>
+                <b>Solution:</b> To understand customer behaviour and needs in
+                order to increase customer loyalty and prevent churn customers.
+                <br />
+                <b>Use case:</b> Operational report for Marketing department of
+                a large furniture and home decore retailer.
+              </p>
+              <a
+                href="/contents_resources/images/customer_transaction_analysis.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/customer_transaction_analysis.png"
+                  width="300"
+              /></a>
+            </div>
+            <br />
 
-            <br /><br /><br />
+            <!-- Operation Line Report -->
 
-            <h2>Financial Analysis Report</h2>
-            <p>
-              <b>Solution:</b> To support financial analysis and fiancial
-              managment to the next level with root-cause analysis, what-if
-              analysis and more.
-              <br />
-              <b>Use case:</b> Top management and operational report for
-              Business Improvement Department of a large drugs and consumer
-              goods manufacturer.
-            </p>
-            <a
-              href="/contents_resources/images/financial_analysis_report.png"
-              target="_blank"
-            >
-              <img
-                src="/contents_resources/images/financial_analysis_report.png"
-                width="300"
-            /></a>
+            <div class="card">
+              <h2>Operation Line Report</h2>
+              <p>
+                <b>Solution:</b> To understand live operation status, prevent
+                operation disruption and accelerate PDCA cycle.
+                <br />
+                <b>Use case:</b> Operational report for Business Improvement
+                Department of a large printing electronic products manufacturer.
+              </p>
+              <a
+                href="/contents_resources/images/production_line_analysis_report.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/production_line_analysis_report.png"
+                  width="300"
+              /></a>
+            </div>
 
-            <br /><br /><br />
+            <br />
 
-            <h2>Material Management Report</h2>
-            <p>
-              <b>Solution:</b> Create Bill of material(BOM) to organize current
-              material management, improve cost control and inventory
-              optimization.
-              <br />
-              <b>Use case:</b> Operational report for Business Improvement
-              Department of a large electric medical appliance manufacturer.
-            </p>
-            <a
-              href="/contents_resources/images/material_management1.png"
-              target="_blank"
-            >
-              <img
-                src="/contents_resources/images/material_management1.png"
-                width="300"
-            /></a>
+            <!-- Financial Analysis Report -->
 
-            <br /><br /><br />
+            <div class="card">
+              <h2>Financial Analysis Report</h2>
+              <p>
+                <b>Solution:</b> To support financial analysis and fiancial
+                managment to the next level with root-cause analysis, what-if
+                analysis and more.
+                <br />
+                <b>Use case:</b> Top management and operational report for
+                Business Improvement Department of a large drugs and consumer
+                goods manufacturer.
+              </p>
+              <a
+                href="/contents_resources/images/financial_analysis_report.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/financial_analysis_report.png"
+                  width="300"
+              /></a>
+            </div>
+            <br />
+
+            <!-- Material Management Report -->
+
+            <div class="card">
+              <h2>Material Management Report</h2>
+              <p>
+                <b>Solution:</b> Create Bill of material(BOM) to organize
+                current material management, improve cost control and inventory
+                optimization.
+                <br />
+                <b>Use case:</b> Operational report for Business Improvement
+                Department of a large electric medical appliance manufacturer.
+              </p>
+              <a
+                href="/contents_resources/images/material_management1.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/material_management1.png"
+                  width="300"
+              /></a>
+            </div>
+            <br />
 
             <h3>Power BI: Visualiation Library</h3>
             <a
