Update projects AI PaaS

--- a/projects.html
+++ b/projects.html
@@ -79,29 +79,82 @@
                 target="_blank"
               >
                 <img
-                  src="/contents/projects/tableau-NLP/tableau_NLP.png"
+                  src="/contents_resources/images/tableau_NLP.png"
                   width="270"
+              /></a>
+            </div>
+            <br /><br />
+
+            <!-- PaaS : AI Development Cloud Architecture  -->
+            <div class="card">
+              <h2>PaaS : AI Development Cloud Architecture</h2>
+              <p>
+                <b>Solution:</b> Develop PaaS environment for AI project
+                development that meet security standard, proper authentication
+                managemen and cost control system.
+                <br />
+                <b>Use case:</b> AI infrastructure for AI development department
+                of a large electric appliance manufacturer.
+              </p>
+              <a href="/contents_resources/images/AI_PaaS.png" target="_blank">
+                <img src="/contents_resources/images/AI_PaaS.png" width="270"
               /></a>
             </div>
 
             <br /><br />
 
-            <!-- Image Recognition: CNN -->
+            <!-- IaaS : AI Development Cloud Architecture  -->
+            <div class="card">
+              <h2>IaaS : AI Development Cloud Architecture</h2>
+              <p>
+                <b>Solution:</b> Develop IaaS environment for AI project that
+                meet security standard, flexible operation and cost
+                minimization.
+                <br />
+                <b>Use case:</b> AI infrastructure for AI development department
+                of a large electric appliance manufacturer.
+              </p>
+              <a href="/contents_resources/images/AI_IaaS.png" target="_blank">
+                <img src="/contents_resources/images/AI_IaaS.png" width="270"
+              /></a>
+            </div>
+
+            <br /><br />
+
+            <!-- Kubernetes Deployment : AI Development Cloud Architecture  -->
+            <div class="card">
+              <h2>Kubernetes Deployment : AI Development Cloud Architecture</h2>
+              <p>
+                <b>Solution:</b> Kubernetes Deployment environment for AI
+                project that meet security standard, elastic operation and cost
+                minimization.
+                <br />
+                <b>Use case:</b> AI infrastructure for AI development department
+                of a large electric appliance manufacturer.
+              </p>
+              <a href="/contents_resources/images/AI_K8s.png" target="_blank">
+                <img src="/contents_resources/images/AI_K8s.png" width="270"
+              /></a>
+            </div>
+
+            <br /><br />
+
+            <!-- AI at the edge -->
 
             <div class="card">
-              <h2>Image Recognition: CNN</h2>
+              <h2>AI at the edge</h2>
               <p>
-                <b>Solution:</b> Develop IaaS AI .
+                <b>Solution:</b> Develop AI at the Edge.
                 <br />
                 <b>Use case:</b> AI cloud infrastructure for AI development
-                department in a large camera electric appliance manufacturer
+                department in a large electric appliance manufacturer
               </p>
               <a
                 href="/contents/projects/digits-recognition/ai.html"
                 target="_blank"
               >
                 <img
-                  src="/contents/projects/digits-recognition/img/AI_digits_recognition.png"
+                  src="/contents_resources/images/AI_digits_recognition.png"
                   width="270"
               /></a>
             </div>
