--- a/skills.html
+++ b/skills.html
@@ -70,7 +70,7 @@
 							<div class="inner">
 								<img src="images/data_analyst.png" style="width:150px;" alt="" />
 								<div class="content">
-									<h2 class="major">as Data Analysis</h2>
+									<h2 class="major">as Data Analyst</h2>
 									<p>
 										More than 10 years experience in BI(business intelligent) development to serve variouse business needs including retail management, customer relationship management, marketing analysis, production management, supply chain management, financial repot and more.
 									</p>
