--- a/projects.html
+++ b/projects.html
@@ -144,7 +144,7 @@
             <div class="card">
               <h2>AI at the edge</h2>
               <p>
-                <b>Solution:</b> Develop AI at the Edge.
+                <b>Solution:</b> Develop AI at the Edge framework.
                 <br />
                 <b>Use case:</b> AI cloud infrastructure for AI development
                 department in a large electric appliance manufacturer
