Add project inventory management

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,9 @@
       <div class="inner">
         <section>
           <h2>Projects</h2>
-          <blockquote>Few of my MOCKUP of AI and BI projects.</blockquote>
+          <blockquote>
+            Some of my MOCKUP of AI, BI and Cloud projects.
+          </blockquote>
 
           <!-- One -->
 
@@ -158,11 +160,67 @@
                   width="270"
               /></a>
             </div>
+            <br /><br />
 
-            <br />
+            <!-- Face Recognition -->
+
+            <div class="card">
+              <h2>AI: Face Recognition</h2>
+              <p><b>Solution:</b> Face Recognition Framework</p>
+              <a
+                href="/contents_resources/images/AI_face_detection.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/AI_face_detection.png"
+                  width="270"
+              /></a>
+            </div>
+            <br /><br />
+
+            <!-- IoT Object Detection -->
+
+            <div class="card">
+              <h2>IoT: Object Detection</h2>
+              <p>
+                <b>Solution:</b> Develop object detection model(CNN, ResNet,
+                MobileNet,...)
+              </p>
+              <a
+                href="/contents_resources/images/IoT_object_detection.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/IoT_object_detection.png"
+                  width="270"
+              /></a>
+            </div>
+            <br /><br />
 
             <hr />
             <h2>BI Solutions</h2>
+
+            <!-- Inventory Management -->
+
+            <div class="card">
+              <h2>Inventory Management</h2>
+              <p>
+                <b>Solution:</b> To identify opportunity loss and get optimize
+                inventory via optimizer and fine-tune with expert.
+                <br />
+                <b>Use case:</b> Operation report for Business process
+                improvement department of large electric appliance manufacturer.
+              </p>
+              <a
+                href="/contents_resources/images/customer_transaction_analysis.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/customer_transaction_analysis.png"
+                  width="270"
+              /></a>
+            </div>
+            <br />
 
             <!-- Customer Transaction Analysis -->
 
@@ -256,29 +314,33 @@
             </div>
             <br />
 
-            <h3>Power BI: Visualiation Library</h3>
-            <a
-              href="https://community.powerbi.com/t5/Data-Stories-Gallery/PowerBI-Visual-Library/td-p/998398"
-              target="_blank"
-            >
-              <img
-                src="/contents_resources/images/powerbi_viz_library.png"
-                width="270"
-            /></a>
+            <div class="card">
+              <h2>Power BI: Visualiation Library</h2>
+              <a
+                href="https://community.powerbi.com/t5/Data-Stories-Gallery/PowerBI-Visual-Library/td-p/998398"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/powerbi_viz_library.png"
+                  width="270"
+              /></a>
+            </div>
 
             <br /><br />
 
-            <h3>
-              Tableau: Visualiation Library
-            </h3>
-            <a
-              href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/Book1_v10_4/AnalysisLibrary"
-              target="_blank"
-            >
-              <img
-                src="/contents_resources/images/tableau_viz_library.png"
-                width="270"
-            /></a>
+            <div class="card">
+              <h2>
+                Tableau: Visualiation Library
+              </h2>
+              <a
+                href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/Book1_v10_4/AnalysisLibrary"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/tableau_viz_library.png"
+                  width="270"
+              /></a>
+            </div>
 
             <br /><br /><br />
           </div>
