--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
               <h2>Tableau: Natural Language Processing(NLP)</h2>
               <p>
                 <b>Solution:</b> Apply NLP to extract unstructured data and
-                indentify opportunity from Service quantity KPI report.
+                identify opportunity from Service quantity KPI report.
               </p>
               <a
                 href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/CallCenterVoiceAnalysis/ConversationAnalysis"
