--- a/projects.html
+++ b/projects.html
@@ -166,7 +166,11 @@
 
             <div class="card">
               <h2>AI: Face Recognition</h2>
-              <p><b>Solution:</b> Face Recognition Framework</p>
+              <p>
+                <b>Solution:</b> Face Recognition Framework
+                <br />
+                Research Project
+              </p>
               <a
                 href="/contents_resources/images/AI_face_detection.png"
                 target="_blank"
@@ -185,6 +189,8 @@
               <p>
                 <b>Solution:</b> Develop object detection model(CNN, ResNet,
                 MobileNet,...)
+                <br />
+                Research Project
               </p>
               <a
                 href="/contents_resources/images/IoT_object_detection.png"
