--- a/projects.html
+++ b/projects.html
@@ -322,6 +322,7 @@
 
             <div class="card">
               <h2>Power BI: Visualiation Library</h2>
+              <p>My knowledge sharing for community</p>
               <a
                 href="https://community.powerbi.com/t5/Data-Stories-Gallery/PowerBI-Visual-Library/td-p/998398"
                 target="_blank"
@@ -338,6 +339,7 @@
               <h2>
                 Tableau: Visualiation Library
               </h2>
+              <p>My knowledge sharing for community</p>
               <a
                 href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/Book1_v10_4/AnalysisLibrary"
                 target="_blank"
