update skill nutshell

--- a/skills.html
+++ b/skills.html
@@ -148,12 +148,115 @@
 						</div>
 					</section>
 
+					<!-- Size -->
+					<section id="two" class="wrapper alt spotlight style2">
+						<div class="inner">
+							<div class="content">
+								<img src="images/nutshell.png" style="width:100px;" alt="" />
+
+								<h2 class="major">In a Nutshell</h2>
+								<p>Timeline</p>
+								<table class="alt">
+									<tbody>
+										<tr>
+											<td>
+											Data Analyst <br>
+											Senior Manager<br>
+											<a href="https://www.nielsen.com/" target="_blank">Nielsen &#127760;</a> <br>
+											9 years<br>
+											Thailand
+											</td>
+											<td>
+												Data Analyst <br>
+												BI Developer <br>
+												Digital Marketer <br>
+											    Brainchild Inc.<br>
+												2 years <br>
+												Japan
+											</td>
+											<td>
+												Data Science <br>
+												BI Developer <br>
+												<a href="https://www.worksid.co.jp/" target="_blank">Works ID &#127760;</a> <br>
+												2 years <br>
+												Japan
+											</td>
+										</tr>
+									</tbody>
+								</table>
+								<p>Literacy</p>
+								<table class="alt">
+									<tbody>
+										<tr>
+											<td>
+											<b>Human Language</b> <br>
+											Thai               ★ ★ ★ ★ ★<br>
+											English            ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											Japanese           ★ ★ ★ <span style="color: gray;"> ★ ★</span> <br>
+											Chinese (Mandarin) ★ ★ <span style="color: gray;"> ★ ★ ★</span>	
+										</tr>
+										<tr>
+											<td>
+											<b>Computer Language</b> <br>
+											Python  ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											<p style="color: skyblue;">
+											Data preparation: Numpy, scipy, Pandas<br>
+											Machine Learning: Sci-kit learn, Statsmodels, xgboost, lightgbm, Tensorflow, Keras <br>
+											Visualization: Matplotlib, seaborn<br> 
+											Image processing: OpenCV, Pillow <br>
+											Web Scrapping: Beautiful Soup 4, Selenium<br>
+											NLP: Natural Language Toolkit (NLTK), Mecab, janome, wordcloud<br>
+											Sound Processing: librosa <br>
+											Recommendation System: scikit-surprise<br>
+											Optimization: PuLP 
+										    </p>
+											PySpark ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											R       ★ <span style="color: gray;">★ ★ ★ ★</span> <br>
+											SQL     ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											HTML    ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											CSS     ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											JavaScript ★ ★ ★ <span style="color: gray;"> ★ ★</span>  
+										</tr>
+									</tbody>
+								</table>
+
+								<p>App・System</p>
+								<table class="alt">
+									<tbody>
+										<tr>
+											<td>
+											<b>BI</b> <br>
+											Power BI      ★ ★ ★ ★ ★<br>
+											Tableau       ★ ★ ★ ★ ★ <br>
+											<br>
+											<b>Cloud</b> <br>
+											Azure (Microsoft)   ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											GPC (Google)        ★ ★ ★ <span style="color: gray;"> ★ ★</span> <br>
+											AWS (Amazon)        ★ <span style="color: gray;">  ★ ★ ★ ★</span> <br>
+											<br>
+											<b>Database</b> <br>
+											SQL Server      ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											My SQL       ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											<br>
+											<b>Tools</b> <br>
+											Wordpress (CMS)           ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											Kairos3 (Marketing Automation)   ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+
+							</div>
+						</div>
+					</section>
+
 					<div style="
 					display: flex;
 					flex-direction: column;
 					align-items: center;">
 					   <div style="display: inline-block;">
-							<button onclick="document.location = 'index.html'" style="width:80px;"> ＜ </button>　　　　　　　　<button onclick="document.location = 'projects.html'" style="width:80px;"> ＞ </button>  
+							<button onclick="document.location = 'index.html'" style="width:80px;"> ＜ </button>　　　　　　　　
+							<button onclick="document.location = 'projects.html'" style="width:80px;"> ＞ </button>  
 					    </div>
 					</div>
 						   
