--- a/skills.html
+++ b/skills.html
@@ -177,6 +177,7 @@
 											<td>
 												Data Science <br>
 												BI Developer <br>
+												Cloud Engineer <br>
 												<a href="https://www.worksid.co.jp/" target="_blank">Works ID &#127760;</a> <br>
 												2 years <br>
 												Japan
