--- a/skills.html
+++ b/skills.html
@@ -160,27 +160,26 @@
 									<tbody>
 										<tr>
 											<td>
-											Data Analyst <br>
-											Senior Manager<br>
-											<a href="https://www.nielsen.com/" target="_blank">Nielsen &#127760;</a> <br>
-											9 years<br>
-											Thailand
+												Present:<br>
+												<a href="https://www.worksid.co.jp/" target="_blank">
+													Works ID Co., Ltd. &#127760;</a> Japan <br>
+												Role: Data Science, BI Developer, Cloud Engineer<br>
+												2 years												
 											</td>
+										</tr>
+										<tr>									
 											<td>
-												Data Analyst <br>
-												BI Developer <br>
-												Digital Marketer <br>
-											    Brainchild Inc.<br>
-												2 years <br>
-												Japan
+												Brainchild Inc. Japan<br>
+												Roles: Data Analyst, BI Developer, Digital Marketer <br>
+												2 years
 											</td>
+										</tr>
+										<tr>
 											<td>
-												Data Science <br>
-												BI Developer <br>
-												Cloud Engineer <br>
-												<a href="https://www.worksid.co.jp/" target="_blank">Works ID &#127760;</a> <br>
-												2 years <br>
-												Japan
+												<a href="https://www.nielsen.com/" target="_blank">
+													Nielsen Co., Ltd.&#127760;</a> Thailand<br>
+												Data Analyst -> Senior Manager<br>
+												9 years												
 											</td>
 										</tr>
 									</tbody>
@@ -254,7 +253,8 @@
 					<div style="
 					display: flex;
 					flex-direction: column;
-					align-items: center;">
+					align-items: center;
+					">
 					   <div style="display: inline-block;">
 							<button onclick="document.location = 'index.html'" style="width:80px;"> ＜ </button>　　　　　　　　
 							<button onclick="document.location = 'projects.html'" style="width:80px;"> ＞ </button>  
