--- a/skills.html
+++ b/skills.html
@@ -160,11 +160,11 @@
 									<tbody>
 										<tr>
 											<td>
-												Present:<br>
+												<br>
 												<a href="https://www.worksid.co.jp/" target="_blank">
 													Works ID Co., Ltd. &#127760;</a> Japan <br>
 												Role: Data Science, BI Developer, Cloud Engineer<br>
-												2 years												
+												2 years	(Present)										
 											</td>
 										</tr>
 										<tr>									
