--- a/contacts.html
+++ b/contacts.html
@@ -28,8 +28,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Get in Touch</a></h1>
-						<nav>
+						<h1><a href="index.html"><img src="/images/J_favicon/favicon.ico" width="20em" >
+						</a>&emsp; CONTACTS</h1>						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
