--- a/contents.html
+++ b/contents.html
@@ -27,8 +27,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Contents</a></h1>
-						<nav>
+						<h1><a href="index.html"><img src="/images/J_favicon/favicon.ico" width="20em" >
+						</a>&emsp; CONTENTS</h1>						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
