--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,12 @@
 
     <!-- Header -->
     <header id="header">
-      <h1><a href="index.html">Projects</a></h1>
+      <h1>
+        <a href="index.html"
+          ><img src="/images/J_favicon/favicon.ico" width="20em"
+        /></a>
+        &emsp; PROJECTS
+      </h1>
       <nav>
         <a href="#menu">Menu</a>
       </nav>
