--- a/skills.html
+++ b/skills.html
@@ -27,7 +27,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Skills</a></h1>
+						<h1><a href="index.html"><img src="/images/J_favicon/favicon.ico" width="20em" >
+						</a>&emsp; SKILLS</h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
