--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
         <section>
           <h2>Projects</h2>
           <blockquote>
-            Some of my MOCKUP of AI, BI and Cloud projects.
+            MOCKUPs of some of my AI, BI and Cloud projects.
           </blockquote>
 
           <!-- One -->
