--- a/skills.html
+++ b/skills.html
@@ -156,7 +156,7 @@
 								<img src="images/nutshell.png" style="width:100px;" alt="" />
 
 								<h2 class="major">In a Nutshell</h2>
-								<p>Timeline</p>
+								<p>Working Experience</p>
 								<table class="alt">
 									<tbody>
 										<tr>
