--- a/contacts.html
+++ b/contacts.html
@@ -42,7 +42,8 @@
 								<li><a href="index.html">SAY HI!</a></li>
 								<li><a href="skills.html">SKILLS</a></li>
 								<li><a href="projects.html">PROJECTS</a></li>
-								<li><a href="contents.html">CONTENTS</a></li>
+								<li><a href="blog.html">BLOG</a></li>
+								<li><a href="knowledge.html">KNOWLEDGE</a></li>
 								<li><a href="contacts.html">GET IN TOUCH</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -91,7 +92,7 @@
 							flex-direction: column;
 							align-items: center;">
 							   <div style="display: inline-block;">
-									<button onclick="document.location = 'contents.html'" style="width:80px;"> ＜ </button>　　　　　　　　
+									<button onclick="document.location = 'knowledge.html'" style="width:80px;"> ＜ </button>　　　　　　　　
 									<button onclick="document.location = 'index.html'" style="width:80px;"> ＞ </button>  
 								</div>
 							</div>
