--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,8 @@
           <li><a href="index.html">SAY HI!</a></li>
           <li><a href="skills.html">SKILLS</a></li>
           <li><a href="projects.html">PROJECTS</a></li>
-          <li><a href="contents.html">CONTENTS</a></li>
+          <li><a href="blog.html">BLOG</a></li>
+          <li><a href="knowledge.html">KNOWLEDGE</a></li>
           <li><a href="contacts.html">GET IN TOUCH</a></li>
         </ul>
         <a href="#" class="close">Close</a>
@@ -372,7 +373,7 @@
               </button>
               &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
               <button
-                onclick="document.location = 'contents.html'"
+                onclick="document.location = 'blog.html'"
                 style="width: 80px;"
               >
                 ＞
