--- a/blog.html
+++ b/blog.html
@@ -76,59 +76,12 @@
 										<a href="contents/PYSPARK/index.html" target="_blank">
 										<img src="/contents_resources/icons/logo_sklearn.png" width="43"></a> -->
 									</section><br><br>
-
-									<h1 class="major">Articales</h1>
-
-									<section>
-										<h1>📘 My Articles</h1>
-										<div class="table-wrapper">
-											<table class="alt">
-												<thead>
-													<tr>
-														<th>Articales</th>
-														<th>Tags</th>
-														<th>Links</th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td>Python Clean Code</td>
-														<td>Production Python</td>
-														<td><a href="contents/articles/Python-Clean-Code.html" target="_blank">Open</a></td>
-													</tr>
-													<tr>
-														<td>Python Environment</td>
-														<td>How to create python environment.</td>
-														<td><a href="contents/articles/Python-Environment.html" target="_blank">Open</a></td>
-													</tr>
-													<tr>
-														<td>Object Detection Summary</td>
-														<td>Wrap-up of Object detection methods.</td>
-														<td><a href="contents/articles/Object-Detection.html" target="_blank">Open</a></td>
-													</tr>
-													<tr>
-														<td>Similarity and Distance Algorithms</td>
-														<td>Wrap-up of Similarity and Distance Algorithms</td>
-														<td><a href="contents/articles/Similarity-and-Distance-algorithms.html" target="_blank">Open</a></td>
-													</tr>
-													<tr>
-														<td>Azure Fundamentals</td>
-														<td>Wrap-up to prepare for AZ-900 Exam.</td>
-														<td><a href="contents/articles/Microsoft-Certified-Azure-Fundamentals.html" target="_blank">Open</a></td>
-													</tr>
-													<tr>
-														<td>TensorFlow Developer Certificate
-														</td>
-														<td>Wrap-up to prepare for TensorFlow Developer Certificate
-															Exam.</td>
-														<td><a href="contents/articles/TensorFlow-Developer-Certificate.html" target="_blank">Open</a></td>
-													</tr>
-												</tbody>
-											</table>
-										</div>
-									</section>				
+		
 
 		<!-- Cards -->
+		<h1 class="major">BLOG</h1>	
+		<br><br>
+
 
 		<div class="wrapper">
 			<div class="cards_wrap">
@@ -141,9 +94,12 @@
 				  <div class="card_bottom">
 					<div class="card_info">
 					  <p class="title">Python Clean Code</p>
-					  <p>Guidelines to create production python</p>
+					  <p>Guidelines to create production python
+						<a href="/contents/articles/Python-Clean-Code.html" target="_blank">
+					    <br> LINK</a>
+					  </p>
 					</div>
-					<div class="card_category">＃ Python</div>
+					<div class="card_category">＃Python</div>
 					<div class="card_creator">by jingwora</div>
 				  </div>
 				</div>
@@ -159,9 +115,11 @@
 					  <p class="title">Python Environment</p>
 					  <p>
 						How to manage  for Python environment (venv, pipenv, conda env)
+						<a href="/contents/articles/Python-Environment.html" target="_blank">
+					    <br> LINK</a>
 					</p>
 					</div>
-					<div class="card_category">＃ Python</div>
+					<div class="card_category">＃Python</div>
 					<div class="card_creator">by jingwora</div>
 				  </div>
 				</div>
@@ -170,21 +128,40 @@
 			  <div class="card_item">
 				<div class="card_inner">
 				  <div class="card_top">
-					<img src="card_img.jpg" alt="car" />
+					<img src="/contents_resources/images/blog/object-detection.png" class="responsive" />
 				  </div>
 				  <div class="card_bottom">
-					<div class="card_category">
-					  Travel
-					</div>
 					<div class="card_info">
-					  <p class="title">10 Best Things about Travel</p>
+					  <p class="title">Object Detection Summary</p>
 					  <p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ab.
-					  </p>
+						Wrap-up of Object detection methods.
+						<a href="/contents/articles/Object-Detection.html" target="_blank">
+						<br> LINK</a>
+					</p>
 					</div>
-					<div class="card_creator">
-					  By Alex Kato
+					<div class="card_category">＃Deep Learning</div>
+					<div class="card_creator">by jingwora</div>
+				  </div>
+				</div>
+			  </div>
+
+			  
+			  <div class="card_item">
+				<div class="card_inner">
+				  <div class="card_top">
+					<img src="/contents_resources/images/blog/similarity-distance-algorithms.png" class="responsive" />
+				  </div>
+				  <div class="card_bottom">
+					<div class="card_info">
+					  <p class="title">Similarity and Distance Algorithms</p>
+					  <p>
+						Wrap-up of Similarity and Distance Algorithms
+						<a href="/contents/articles/Similarity-and-Distance-algorithms.html" target="_blank">
+						<br> LINK</a>
+					</p>
 					</div>
+					<div class="card_category">＃Machine Learning</div>
+					<div class="card_creator">by jingwora</div>
 				  </div>
 				</div>
 			  </div>
@@ -192,21 +169,39 @@
 			  <div class="card_item">
 				<div class="card_inner">
 				  <div class="card_top">
-					<img src="card_img.jpg" alt="car" />
+					<img src="/contents_resources/images/blog/azure-fundamental.png" class="responsive" />
 				  </div>
 				  <div class="card_bottom">
-					<div class="card_category">
-					  Travel
-					</div>
 					<div class="card_info">
-					  <p class="title">10 Best Things about Travel</p>
+					  <p class="title">Azure Fundamentals</p>
 					  <p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ab.
-					  </p>
+						Wrap-up to prepare for AZ-900 Exam
+						<a href="/contents/articles/Microsoft-Certified-Azure-Fundamentals.html" target="_blank">
+						<br> LINK</a>
+					</p>
 					</div>
-					<div class="card_creator">
-					  By Alex Kato
+					<div class="card_category">＃Cloud</div>
+					<div class="card_creator">by jingwora</div>
+				  </div>
+				</div>
+			  </div>
+
+			  <div class="card_item">
+				<div class="card_inner">
+				  <div class="card_top">
+					<img src="/contents_resources/images/blog/tensorflow-developer-certificate.png" class="responsive" />
+				  </div>
+				  <div class="card_bottom">
+					<div class="card_info">
+					  <p class="title">TensorFlow Developer Certificate</p>
+					  <p>
+						Wrap-up to prepare for TensorFlow Developer Certificate Exam.
+						<a href="/contents/articles/TensorFlow-Developer-Certificate.html" target="_blank">
+						<br> LINK</a>
+					</p>
 					</div>
+					<div class="card_category">＃Deep Learning</div>
+					<div class="card_creator">by jingwora</div>
 				  </div>
 				</div>
 			  </div>
