--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1><a href="index.html"><img src="/images/J_favicon/favicon.ico" width="20em" >
-						</a>&emsp; BLOG</h1>						<nav>
+						</a>&emsp; BLOG & CODE ESSENCE</h1>						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
@@ -42,7 +42,7 @@
 								<li><a href="index.html">SAY HI!</a></li>
 								<li><a href="skills.html">SKILLS</a></li>
 								<li><a href="projects.html">PROJECTS</a></li>
-								<li><a href="blog.html">BLOG</a></li>
+								<li><a href="blog.html">BLOG & CODE ESSENCE</a></li>
 								<li><a href="knowledge.html">KNOWLEDGE</a></li>
 								<li><a href="contacts.html">GET IN TOUCH</a></li>
 							</ul>
@@ -51,35 +51,16 @@
 					</nav>
 
 
-						<!-- Content -->
-							<div class="wrapper">
-								<div class="inner">
-
-									<section>
-										<h2 class="major" >Blog</h2>
-										<p>Collections of content related to data analysis, artificial intelligent, business intelligents and more...</p>
-										<br>
-										
-										<img src="contents_resources/icons/code_essence.png" width="80"><h1>CODE ESSENCE</h1>
-										<p>My essence extraction of key programming languages</p>
-
-										<a href="contents/SQL/SQL.html" target="_blank">
-										<img src="/contents_resources/icons/logo_sql.png" width="50"></a>
-										<a href="contents/HTML/HTML.html" target="_blank">
-										<img src="/contents_resources/icons/logo_html.png" width="50"></a>
-										<a href="contents/CSS/CSS.html" target="_blank">
-										<img src="/contents_resources/icons/logo_css.png" width="47"></a>
-										<a href="contents/JS/JS.html" target="_blank">
-										<img src="/contents_resources/icons/logo_js.png" width="51"></a>
-										<!-- <a href="contents/PYSPARK/index.html" target="_blank">
-										<img src="/contents_resources/icons/logo_spark.png" width="43"></a>
-										<a href="contents/PYSPARK/index.html" target="_blank">
-										<img src="/contents_resources/icons/logo_sklearn.png" width="43"></a> -->
-									</section><br><br>
-		
+		<!-- Content -->
+		<div class="wrapper">
+		   <div class="inner">
+	
 
 		<!-- Cards -->
+		<br>
 		<h1 class="major">BLOG</h1>	
+		<p>Collections of content related to data analysis, artificial intelligent, business intelligents and more...</p>
+
 		<br><br>
 
 
@@ -210,6 +191,96 @@
 		  </div>
 		  <br>
 		  <br>
+
+
+		  <section>
+			<hr>
+			<br>
+			
+			<img src="contents_resources/icons/code_essence.png" width="50"><h1>CODE ESSENCE</h1>
+			Collection of optimized code for production</p>
+
+		<section>
+			<div class="table-wrapper">
+				<table class="alt">
+
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/logo_sql.png" width="50">
+								<br>
+							SQL (Structured Query Language): Language used to acess, 
+								create, edit and managege database. 
+							</td>
+							<td>
+								<a href="contents/SQL/SQL.html" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/logo_html.png" width="50">
+								<br>
+							HTML (Hypertext Markup Language): Language  used to design 
+							display content in a web browser.
+							</td>
+							<td>
+								<a href="contents/HTML/HTML.html" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/logo_css.png" width="47">
+								<br>
+								CSS (Cascading Style Sheets): design language 
+								used to control sytle of content in a web browser.
+							</td>
+							<td>
+								<a href="contents/CSS/CSS.html" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/logo_js.png" width="51">
+								<br>
+								JS (Javascript): Scripting language used to create 
+								and control dynamic website content.
+							</td>
+							<td>
+								<a href="contents/JS/JS.html" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/logo_spark.png" width="43">
+								<br>
+								Pysaprk: Python API for Spark (distributed framework)
+								 that can handle Big Data analysis.
+							</td>
+							<td>
+								<a href="https://community.cloud.databricks.com/login.html" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>
+
+				</table>
+			</div>
+		</section>
+
+
+		  <!-- bottom -->
 
 		  <div style="
 		  display: flex;
