--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><a href="index.html">SAY HI!</a></li>
                 <li><a href="skills.html">SKILLS</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
-                <li><a href="blog.html">BLOG</a></li>
+                <li><a href="blog.html">BLOG & CODE ESSENCE</a></li>
                 <li><a href="knowledge.html">KNOWLEDGE</a></li>
                 <li><a href="contacts.html">GET IN TOUCH</a></li>
 							</ul>
