add knowledge powerapps

--- a/knowledge.html
+++ b/knowledge.html
@@ -87,6 +87,11 @@
 														<td>GCP documents collection</td>
 														<td><a href="https://cloud.google.com/docs" target="_blank">Link</a></td>
 													</tr>
+													<tr>
+														<td>Powerapps</td>
+														<td>Powerapps Documents</td>
+														<td><a href="https://docs.microsoft.com/en-us/powerapps/powerapps-overview" target="_blank">Link</a></td>
+													</tr>
 												</tbody>
 											</table>
 										</div>
