--- a/contacts.html
+++ b/contacts.html
@@ -81,10 +81,9 @@
 									Tokyo Japan
 								</li>
 								<li class="icon solid fa-phone">zoom: jingwora@gmail.com</li>
-								<li class="icon solid fa-envelope"><a href="#">jingwora@gmail.com</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/jingwora</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/jingwora</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/jingwora</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto: jingwora@gmail.com"></a>jingwora@gmail.com</a></li>
+								<li class="icon brands fa-twitter"><a href="https://twitter.com/jingwora" target=”_blank”>twitter.com/jingwora </a></li>
+								<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/Jingwora-107661677731914/" target=”_blank”>facebook.com/jingwora</a></li>
 							</ul>
 
 							<div style="
