--- a/blog.html
+++ b/blog.html
@@ -89,6 +89,25 @@
 			  <div class="card_item">
 				<div class="card_inner">
 				  <div class="card_top">
+					<img src="/contents_resources/images/blog/python-loging-best-practices.png" class="responsive" />
+				  </div>
+				  <div class="card_bottom">
+					<div class="card_info">
+					  <p class="title">Python Loggint Best Practices</p>
+					  <p>Guidelines and sample for Python Logging Best Practices.
+						<a href="/contents/articles/Python_Logging_Best_Practices.html" target="_blank">
+					    <br> LINK</a>
+					  </p>
+					</div>
+					<div class="card_category">＃Python</div>
+					<div class="card_creator">by jingwora</div>
+				  </div>
+				</div>
+			  </div>
+
+			  <div class="card_item">
+				<div class="card_inner">
+				  <div class="card_top">
 					<img src="/contents_resources/images/blog/python-environment.png" class="responsive" />
 				  </div>
 				  <div class="card_bottom">
