Add knowledge Tableau

--- a/knowledge.html
+++ b/knowledge.html
@@ -198,6 +198,36 @@
 										</div>
 									</section>									
 									
+									<section>
+										<h1>📕 Tableau</h1>
+										<div class="table-wrapper">
+											<table class="alt">
+												<thead>
+													<tr>
+														<th>Titles</th>
+														<th>Details</th>
+														<th>Links</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td>Tableau gallery</td>
+														<td>Collections of Tableau Visualization</td>
+														<td><a href="https://public.tableau.com/en-us/s/gallery">Link</a></td>
+													</tr>
+												</tbody>
+												<tbody>
+													<tr>
+														<td>AD Singel Sign on with Tableau Online</td>
+														<td>Tutorial: Azure Active Directory single sign-on (SSO) integration with Tableau Online.</td>
+														<td><a href="https://docs.microsoft.com/ja-jp/azure/active-directory/saas-apps/tableauonline-tutorial">Link</a></td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</section>
+									<br>
+
 									<div style="
 									display: flex;
 									flex-direction: column;
