update blog python env

--- a/blog.html
+++ b/blog.html
@@ -112,7 +112,7 @@
 				  </div>
 				  <div class="card_bottom">
 					<div class="card_info">
-					  <p class="title">Python Loggint Best Practices</p>
+					  <p class="title">Python Logging Best Practices</p>
 					  <p>Guidelines and sample for Python Logging Best Practices.
 						<a href="/contents/articles/Python_Logging_Best_Practices.html" target="_blank">
 					    <br> LINK</a>
