--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,8 @@
 			gtag('config', 'G-HDYFX99SK4');
 		</script>
 	</head>
+
+
 	<body class="is-preload">
 
 		<!-- Page Wrapper -->
@@ -236,7 +238,7 @@
 			<br>
 			
 			<img src="contents_resources/icons/code_essence.png" width="50"><h1>CODE ESSENCE</h1>
-			Collection of optimized code for production</p>
+			<p>Collection of optimized code for production</p>
 
 		<section>
 			<div class="table-wrapper">
@@ -332,6 +334,69 @@
 			</div>
 		</section>
 
+		<h2>PYTHON CODE ESSENCE</h2>
+
+		<section>
+			<div class="table-wrapper">
+				<table class="alt">
+
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/logo_python.png" width="50">
+								<br>
+							    System Utility - 
+							    <br>
+								<a href="contents/Python/22_Numpy.html" target="_blank">
+								LINK</a>
+								<br>
+							    Core python
+							    <br>
+								<a href="contents/Python/11_Python_core.html" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/logo_python-numpy.png" width="130">
+								<br>
+							    Numpy
+							    <br>
+								<a href="contents/Python/22_Numpy.html" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/logo_python-pandas.png" width="130">
+								<br>
+							    Pandas
+							    <br>
+								<a href="contents/Python/23_Pandas.html" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/logo_python-scikit-learn.png" width="80">
+								<br>
+				                Pandas
+							    <br>
+								<a href="contents/Python/23_Pandas.html" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</section>
+
 
 		  <!-- bottom -->
 
@@ -344,7 +409,6 @@
 				  <button onclick="document.location = 'knowledge.html'" style="width:80px;"> ＞ </button>  
 			  </div>
 		  </div>
-
 
         <!-- Footer -->
 					<section id="footer">
