update blog python

--- a/blog.html
+++ b/blog.html
@@ -345,12 +345,12 @@
 							<td>
 								<img src="/contents_resources/icons/logo_python.png" width="50">
 								<br>
-							    System Utility - 
+							    System Utility - Commands, Cloud Connection
 							    <br>
 								<a href="contents/Python/22_Numpy.html" target="_blank">
 								LINK</a>
 								<br>
-							    Core python
+							    Core python - Handle main python datatype 
 							    <br>
 								<a href="contents/Python/11_Python_core.html" target="_blank">
 								LINK</a>
@@ -362,7 +362,7 @@
 							<td>
 								<img src="/contents_resources/icons/logo_python-numpy.png" width="130">
 								<br>
-							    Numpy
+							    Numpy - Fundamental package to handle arrays with scidentific computing.
 							    <br>
 								<a href="contents/Python/22_Numpy.html" target="_blank">
 								LINK</a>
@@ -374,7 +374,7 @@
 							<td>
 								<img src="/contents_resources/icons/logo_python-pandas.png" width="130">
 								<br>
-							    Pandas
+							    Pandas - Powerful and flexible data analysis and manipulation package.
 							    <br>
 								<a href="contents/Python/23_Pandas.html" target="_blank">
 								LINK</a>
@@ -386,7 +386,7 @@
 							<td>
 								<img src="/contents_resources/icons/logo_python-scikit-learn.png" width="80">
 								<br>
-				                Pandas
+				                Scikit-learn - The most robust machine learning package.
 							    <br>
 								<a href="contents/Python/23_Pandas.html" target="_blank">
 								LINK</a>
