update blog code

--- a/blog.html
+++ b/blog.html
@@ -347,9 +347,9 @@
 								<br>
 							    System Utility - Commands, Cloud Connection
 							    <br>
-								<a href="contents/Python/22_Numpy.html" target="_blank">
+								<a href="contents/Python/10_Sytem Utility.html" target="_blank">
 								LINK</a>
-								<br>
+								<br><br>
 							    Core python - Handle main python datatype 
 							    <br>
 								<a href="contents/Python/11_Python_core.html" target="_blank">
@@ -360,21 +360,24 @@
 					<tbody>
 						<tr>
 							<td>
-								<img src="/contents_resources/icons/logo_python-numpy.png" width="130">
+								<img src="/contents_resources/icons/data-preparation.png" width="170">
 								<br>
-							    Numpy - Fundamental package to handle arrays with scidentific computing.
-							    <br>
-								<a href="contents/Python/22_Numpy.html" target="_blank">
-								LINK</a>
+								Numpy - Fundamental package to handle arrays with scidentific computing.
+								<br>
+								<a href="contents/Python/22_Numpy.html" target="_blank">LINK</a>
+								<br><br>
+								Pandas - Powerful and flexible data analysis and manipulation package.
+								<br>
+								<a href="contents/Python/23_Pandas.html" target="_blank">LINK</a>
 							</td>
 						</tr>
 					</tbody>
 					<tbody>
 						<tr>
 							<td>
-								<img src="/contents_resources/icons/logo_python-pandas.png" width="130">
+								<img src="/contents_resources/icons/machine-learning.png" width="150">
 								<br>
-							    Pandas - Powerful and flexible data analysis and manipulation package.
+								Scikit-learn - The most robust machine learning package.
 							    <br>
 								<a href="contents/Python/23_Pandas.html" target="_blank">
 								LINK</a>
@@ -384,16 +387,27 @@
 					<tbody>
 						<tr>
 							<td>
-								<img src="/contents_resources/icons/logo_python-scikit-learn.png" width="80">
+								<img src="/contents_resources/icons/deep-learning.png" width="150">
 								<br>
-				                Scikit-learn - The most robust machine learning package.
+								Scikit-learn - The most robust machine learning package.
 							    <br>
 								<a href="contents/Python/23_Pandas.html" target="_blank">
 								LINK</a>
 							</td>
 						</tr>
 					</tbody>
-				</table>
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents_resources/icons/web-scraping.png" width="150">
+								<br>
+								Beautiful Soup 4, Selenium, Requests, lxml, Scrapy
+							    <br>
+								<a href="https://github.com/jingwora/opencode-webscraping/tree/master/notebooks" target="_blank">
+								LINK</a>
+							</td>
+						</tr>
+					</tbody>				</table>
 			</div>
 		</section>
 
