--- a/blog.html
+++ b/blog.html
@@ -389,7 +389,7 @@
 							<td>
 								<img src="/contents_resources/icons/deep-learning.png" width="150">
 								<br>
-								Scikit-learn - The most robust machine learning package.
+								TensorFlow - Machine Learning and Deep Learning package with many extended packages.
 							    <br>
 								<a href="contents/Python/23_Pandas.html" target="_blank">
 								LINK</a>
